--- a/SiliconWebApp/Views/_ViewImports.cshtml
+++ b/SiliconWebApp/Views/_ViewImports.cshtml
@@ -3,3 +3,4 @@
 @using Infrastructure.Entities
 @using Microsoft.AspNetCore.Identity
 @using SiliconWebApp.ViewModels.Account
+@using SiliconWebApp.ViewModels.Courses
