--- a/SiliconWebApp/Views/Home/Home.cshtml
+++ b/SiliconWebApp/Views/Home/Home.cshtml
@@ -1,4 +1,71 @@
-﻿@{
+﻿@model SubscriberEntity
+
+
+@{
+    ViewData["Title"] = "Home";
+}
+
+<partial name="~/Views/Shared/HomeSections/_Showcase.cshtml" />
+<partial name="~/Views/Shared/HomeSections/_Features.cshtml" />
+<partial name="~/Views/Shared/HomeSections/_LaptopImage.cshtml" />
+<partial name="~/Views/Shared/HomeSections/_Manage.cshtml" />
+<partial name="~/Views/Shared/HomeSections/_Download.cshtml" />
+<partial name="~/Views/Shared/HomeSections/_Integrate.cshtml" />
+
+<section class="anything">
+    <div class="container">
+        <div class="title">
+            <h1>Don't Want to Miss Anything?</h1>
+            <img src="images/arrowsanything.svg" alt="">
+        </div>
+        <form asp-action="Home" asp-controller="Home" method="post" >
+            <div class="checksbox">
+                <div class="checktitle">
+                    <h5>Sign up for <br> Newsletters</h5>
+                </div>
+                <div class="inner-container">
+                    <div class="check">
+                        <input type="checkbox" id="checkbox1" name="group">
+                        <label for="checkbox">Daily Newsletter</label><br>
+
+                        <input type="checkbox" id="checkbox2" name="group">
+                        <label for="checkbox">Event Updates</label><br>
+                    </div>
+                    <div class="check">
+                        <input type="checkbox" id="checkbox1" name="group">
+                        <label for="checkbox">Advertising Updates</label><br>
+
+                        <input type="checkbox" id="checkbox2" name="group">
+                        <label for="checkbox">Startups Weekly</label><br>
+                    </div>
+                    <div class="check">
+                        <input type="checkbox" id="checkbox1" name="group">
+                        <label for="checkbox">Week in Review</label><br>
+
+                        <input type="checkbox" id="checkbox2" name="group">
+                        <label for="checkbox">Podcasts</label><br>
+                    </div>
+                   
+                </div>
+            </div>
+       
+
+            <div class="subscribecheck">
+                <input asp-for="@Model.Email" class="input-with-icon" placeholder="Your Email" name="Email">
+                <button type="submit" class="btn-theme">Subscribe*</button>
+            </div>
+            <p>*Yes, I agree to the <a href="#">terms</a> and <a href="#">privacy policy</a>.</p>
+        </form>
+    </div>
+</section>
+
+
+
+
+
+
+
+@* @{
     ViewData["Title"] = "Home";
 }
 
@@ -11,3 +78,4 @@
 <partial name="~/Views/Shared/HomeSections/_Anything.cshtml" />
 
 
+ *@
